fixed overflow issue with Navbar and have hidden scroll bars keeping functionality

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+.body::-webkit-scrollbar {
+  display: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
